Fix mobile search bar alignment.

--- a/app/assets/stylesheets/master.styl
+++ b/app/assets/stylesheets/master.styl
@@ -587,6 +587,9 @@ form
       left: 15px
       top: 12px
       font-size: 1em
+      @media phone
+        left: 8px
+        top: 14px
       &.icon-close
         cursor: pointer
         display: none
@@ -606,7 +609,7 @@ form
         outline: none
       @media phone
         font-size: 0.9em
-        padding: 15px 12px 14px 33px
+        padding: 15px 12px 14px 25px
     @media phone
       padding-right: 3px
   .select2-container
@@ -619,6 +622,8 @@ form
       line-height: 34px
       font-size: 14px
       color: dark-gray
+      @media phone
+        padding: 6px 12px !important
     @media phone
       width: auto
 
